// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopBar button should render for default values 1`] = `
<div>
  <button
    aria-controls="menu-list-:r1:"
    aria-expanded="false"
    aria-haspopup="menu"
    aria-label="abc-component"
    class="chakra-menu__menu-button css-10l0d22"
    id="menu-button-:r1:"
  >
    <span
      class="css-xl71ch"
    >
      <p
        class="chakra-text css-0"
      >
        abc
      </p>
    </span>
  </button>
</div>
`;

exports[`TopBar button should render with search icon 1`] = `
<div>
  <button
    aria-controls="menu-list-:r5:"
    aria-expanded="false"
    aria-haspopup="menu"
    aria-label="abc-component"
    class="chakra-menu__menu-button css-10l0d22"
    id="menu-button-:r5:"
  >
    <span
      class="css-xl71ch"
    >
      <p
        class="chakra-text css-0"
      >
        abc
      </p>
      <svg
        fill="currentColor"
        viewBox="0 0 24 24"
      >
        <path
          d="M10 18a7.952 7.952 0 004.897-1.688l4.396 4.396 1.414-1.414-4.396-4.396A7.952 7.952 0 0018 10c0-4.411-3.589-8-8-8s-8 3.589-8 8 3.589 8 8 8zm0-14c3.309 0 6 2.691 6 6s-2.691 6-6 6-6-2.691-6-6 2.691-6 6-6z"
        />
      </svg>
    </span>
  </button>
</div>
`;
